
aclocaldir = $(datadir)/aclocal
dist_aclocal_DATA = gst.m4

dist_noinst_SCRIPTS = texi2dvi texi2html help2man

dist_noinst_DATA = \
align.m4 bold.m4 codeset.m4 ext_goto.m4 fault.m4 gcc.m4 getpagesize.m4 \
glib-2.0.m4 gmp.m4 gst.m4 gtk-2.0.m4 iconv.m4 inet.m4 \
lib-ld.m4 lib-link.m4 lib-prefix.m4 libtool.m4 \
lightning.m4 localtime.m4 ltdl.m4 mmap-anon.m4 modules.m4 pkg.m4 \
readline.m4 relocatable.m4 restrict.m4 sigaltstack-longjmp.m4 \
sigaltstack-siglongjmp.m4 sigaltstack.m4 snprintfv.m4 strtoul.m4 \
symbolset.m4 tcltk.m4 version.m4

